--- a/src/web-fls-quiz/Views/Home/Index.cshtml
+++ b/src/web-fls-quiz/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿<!-- ko if: isIntroActive -->
-<!-- ko component: { name: "intro", params: { showTest: showTest } } --><!-- /ko -->
+﻿@model Quiz
+
+<!-- ko if: isIntroActive -->
+<!-- ko component: { name: "intro", params: { showTest: showTest, quizGreeting : "@(new Microsoft.AspNetCore.Html.HtmlString(Model.Greeting))" } } --><!-- /ko -->
 <!-- /ko -->
 <!-- ko if: isTestActive -->
-<!-- ko component: { name: "test", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showSubmit: showSubmit, showIntro: showIntro, addUserAnswer: addUserAnswer } } --><!-- /ko -->
+<!-- ko component: { name: "test", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showSubmit: showSubmit, showIntro: showIntro, addUserAnswer: addUserAnswer, quizId : @Model.Id } } --><!-- /ko -->
 <!-- /ko -->
 <!-- ko if: isSubmitActive -->
 <!-- ko component: { name: "submit", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showFinish: showFinish } } --><!-- /ko -->
