HTML in QuizGreeting renders correctly now

--- a/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/intro/intro.html
+++ b/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/intro/intro.html
@@ -2,7 +2,7 @@
     <div class="bg-colored indent-all">
         <h2 class="centered-h">Приветствуем вас в нашем космическом пространстве!</h2>
         <div class="felix"></div>
-        <p class="centered-h content-felix" data-bind="text: quizGreeting"></p>
+        <div data-bind="html: quizGreeting"></div>
         <div class="centered-h">
             <input readonly class="form-button" data-bind="click: startTestButtonClick" onfocus="this.blur()" value="Начать" />
         </div>
