Installed highlight.js

--- a/src/web-fls-quiz/Views/Shared/_Layout.cshtml
+++ b/src/web-fls-quiz/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="~/content/css/jquery.modal.min.css" />
     <link rel="stylesheet" href="~/content/css/styles.css?q=22" />
     <link rel="stylesheet" href="~/content/css/font-arimo.css" />
+    <link rel="stylesheet" href="~/content/css/vs2015.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body>
@@ -20,5 +21,7 @@
     <script src="~/scripts/vendor/require.min.js"></script>
     <script src="~/scripts/apps/quiz/components/components-bundle.js?q=22"></script>
     <script src="~/scripts/apps/quiz/quiz.config.js"></script>
+    <script src="~/scripts/vendor/highlight.min.js"></script>
+    <script type='text/javascript'>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
