Code highlighting in questions and case-insensitive quiz name

--- a/src/web-fls-quiz/Views/Shared/_Layout.cshtml
+++ b/src/web-fls-quiz/Views/Shared/_Layout.cshtml
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="~/content/css/jquery.modal.min.css" />
     <link rel="stylesheet" href="~/content/css/styles.css?q=22" />
     <link rel="stylesheet" href="~/content/css/font-arimo.css" />
-    <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/shades-of-purple.min.css">
+    <link rel="stylesheet" href="~/content/css/shades-of-purple.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body>
