--- a/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/question/question.html
+++ b/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/question/question.html
@@ -1,7 +1,7 @@
 ﻿<div class="polls-form">
     <!-- ko if: text.length -->
         <div class="polls-form-header">
-            <h2 data-bind="text: text"></h2>
+            <div data-bind="highlightedCode: text"></div>
         </div>
     <!-- /ko -->
 
