--- a/src/web-fls-quiz/Views/Home/Index.cshtml
+++ b/src/web-fls-quiz/Views/Home/Index.cshtml
@@ -6,25 +6,27 @@
 }
 else
 {
-<!-- ko if: isIntroActive -->
-<!-- ko component: { name: "intro", params: { showTest: showTest, quizGreeting : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Greeting))' } } --><!-- /ko -->
-<!-- /ko -->
-<!-- ko if: isTestActive -->
-<!-- ko component: { name: "test", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showSubmit: showSubmit, showIntro: showIntro, addUserAnswer: addUserAnswer, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))' } } --><!-- /ko -->
-<!-- /ko -->
-<!-- ko if: isSubmitActive -->
-<!-- ko component: { name: "submit", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showFinish: showFinish, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))' } } --><!-- /ko -->
-<!-- /ko -->
-<!-- ko if: isFinishActive -->
-<!-- ko component: { name: "finish" } --><!-- /ko -->
-<!-- /ko -->
+    ViewData["OrganizerWebSiteUrl"] = Model.Organizer.CompanyWebSiteUrl;
 
-<div id="modalError" class="modal">
-    <h3>&nbsp;</h3>
-    <h2 data-bind="text: modalErrorMessage"></h2>
-</div>
+    <!-- ko if: isIntroActive -->
+    <!-- ko component: { name: "intro", params: { showTest: showTest, quizGreeting : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Greeting))' } } --><!-- /ko -->
+    <!-- /ko -->
+    <!-- ko if: isTestActive -->
+    <!-- ko component: { name: "test", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showSubmit: showSubmit, showIntro: showIntro, addUserAnswer: addUserAnswer, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))' } } --><!-- /ko -->
+    <!-- /ko -->
+    <!-- ko if: isSubmitActive -->
+    <!-- ko component: { name: "submit", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showFinish: showFinish, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))' } } --><!-- /ko -->
+    <!-- /ko -->
+    <!-- ko if: isFinishActive -->
+    <!-- ko component: { name: "finish" } --><!-- /ko -->
+    <!-- /ko -->
 
-<div class="loading blocker" data-bind="visible: loading">
-    Loading...
-</div>
+    <div id="modalError" class="modal">
+        <h3>&nbsp;</h3>
+        <h2 data-bind="text: modalErrorMessage"></h2>
+    </div>
+
+    <div class="loading blocker" data-bind="visible: loading">
+        Loading...
+    </div>
 }
