--- a/src/web-fls-quiz/Views/Shared/_Layout.cshtml
+++ b/src/web-fls-quiz/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <a target="_blank" rel="noopener noreferrer" href="/"><div class="logo-img"></div></a>
+            <a target="_blank" rel="noopener noreferrer" href="@ViewData["OrganizerWebSiteUrl"]"><div class="logo-img"></div></a>
         </div>
         <div id="quiz-app" class="content">
             @RenderBody()
