--- a/src/web-fls-quiz/wwwroot/content/css/styles.css
+++ b/src/web-fls-quiz/wwwroot/content/css/styles.css
@@ -117,6 +117,13 @@ div {
 .polls-form-header, .content-v-centered .polls-form-header h2 {
     background-color: #0054a6;
     color: white;
+    text-align: center;
+    padding: 1.6rem;
+    line-height: 3.5rem;
+}
+
+.polls-form-header pre {
+    font-size: 2.5rem;
 }
 
 .polls-form-content {
