--- a/src/web-fls-quiz/wwwroot/content/css/styles.css
+++ b/src/web-fls-quiz/wwwroot/content/css/styles.css
@@ -1,6 +1,7 @@
 ﻿/* =============================================================================
 // Mobile first
 // ============================================================================= */
+
 html {
     font-size: 40%;
     height: 100%;
@@ -62,7 +63,8 @@ a {
     color: blue;
 }
 
-ul, ol {
+ul,
+ol {
     list-style-type: none;
 }
 
@@ -75,16 +77,16 @@ div {
     position: relative;
 }
 
-    .container:before {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 7.7rem;
-        background-color: white;
-        z-index: -1;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
+.container:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 7.7rem;
+    background-color: white;
+    z-index: -1;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
 
 .logo {
     height: 7.7rem;
@@ -109,12 +111,15 @@ div {
     text-align: center;
 }
 
+
 /* polls */
+
 .polls-form {
     text-align: center;
 }
 
-.polls-form-header, .content-v-centered .polls-form-header h2 {
+.polls-form-header,
+.content-v-centered .polls-form-header h2 {
     background-color: #0054a6;
     color: white;
     text-align: center;
@@ -124,6 +129,10 @@ div {
 
 .polls-form-header pre {
     font-size: 2.5rem;
+}
+
+.polls-form-header code {
+    font-size: 2.4rem;
 }
 
 .polls-form-content {
@@ -152,19 +161,23 @@ div {
     line-height: 3rem;
 }
 
-    .polls-form li input {
-        margin: 0 1rem 0 0;
-        cursor: pointer;
-    }
+.polls-form li input {
+    margin: 0 1rem 0 0;
+    cursor: pointer;
+}
 
-    .polls-form li label {
-        flex: 1;
-        cursor: pointer;
-    }
+.polls-form li label {
+    flex: 1;
+    cursor: pointer;
+}
 
-    .polls-form li:first-child {
-        border-top: 0;
-    }
+.polls-form li label code {
+    font-size: 2.4rem;
+}
+
+.polls-form li:first-child {
+    border-top: 0;
+}
 
 .polls-img {
     max-width: 100%;
@@ -180,9 +193,9 @@ div {
     padding: 1rem 0;
 }
 
-    .polls-counter .current {
-        font-weight: bold;
-    }
+.polls-counter .current {
+    font-weight: bold;
+}
 
 .polls-buttons {
     margin-top: 3rem;
@@ -209,17 +222,19 @@ div {
     border-bottom: 2px solid #A64D00;
 }
 
+
 /* sign up */
+
 .sign-up-form {
     text-align: center;
     min-height: 60rem;
     padding: 2rem;
 }
 
-    .content-v-centered .sign-up-form h2 {
-        padding: 0;
-        margin: 2rem 1rem;
-    }
+.content-v-centered .sign-up-form h2 {
+    padding: 0;
+    margin: 2rem 1rem;
+}
 
 .fields {
     text-align: left;
@@ -369,14 +384,14 @@ input[type="number"] {
     line-height: 2rem;
 }
 
-    .content-v-centered h2 {
-        padding: 1.6rem;
-        color: #0054a6;
-    }
+.content-v-centered h2 {
+    padding: 1.6rem;
+    color: #0054a6;
+}
 
-    .content-v-centered p {
-        line-height: 2rem;
-    }
+.content-v-centered p {
+    line-height: 2rem;
+}
 
 .indent-b::after {
     content: "";
@@ -475,123 +490,112 @@ p.content-felix {
     color: #0054a6;
 }
 
+
 /* 
 =============================================================================
  Breakpoints
 ============================================================================= 
 */
+
+
 /* mobile-only */
-@media only screen and (max-width: 768px) {
-}
+
+@media only screen and (max-width: 768px) {}
+
 
 /* tablet-only */
-@media only screen and (min-width: 769px) and (max-width: 991px) {
-}
+
+@media only screen and (min-width: 769px) and (max-width: 991px) {}
+
 
 /* desktop-only */
-@media only screen and (min-width: 992px) {
-    html { font-size: 62.5%; }
 
+@media only screen and (min-width: 992px) {
+    html {
+        font-size: 62.5%;
+    }
     h2 {
         font-size: 1.8rem;
         line-height: 2.4rem;
     }
-
     .logo {
         max-width: 102rem;
         margin: 0 auto;
         text-align: center;
     }
-
     .logo-img {
         display: inline-block;
         width: 90%;
         height: 5rem;
         background-size: 21rem auto;
     }
-
     .content {
         max-width: 102rem;
         margin: 0 auto;
         text-align: center;
         padding: 2rem 0;
     }
-
-        .content:before {
-            content: '';
-            display: inline-block;
-            height: 100%;
-            vertical-align: middle;
-            width: 0;
-        }
-
+    .content:before {
+        content: '';
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+        width: 0;
+    }
     .polls-form ul {
         width: 70%;
         margin: 0 auto;
     }
-
     .polls-form li {
         font-size: 1.5rem;
         padding: 1rem 2rem;
         line-height: 2rem;
     }
-
     .form-button {
         font-size: 1.4rem;
     }
-
     .sign-up-form h2 {
         padding: 0;
         margin: 2rem 1rem;
     }
-
     .fields {
         padding-top: 3rem;
     }
-
     .field {
         padding-bottom: 3rem;
         margin-bottom: 3rem;
     }
-
     .form-tip {
         font-size: 1.6rem;
     }
-
     .field-label {
         font-size: 1.6rem;
     }
-
     .field-input[value=""] {
         font-size: 1.6rem;
         line-height: 3rem;
         height: 3rem;
     }
-
     .field-input {
         top: 3rem;
         margin-top: -3rem;
         font-size: 1.6rem;
         line-height: 2rem;
     }
-
     .margin-t {
         margin-top: 6rem;
         box-sizing: border-box;
     }
-
     .field-input[value=""] {
         line-height: 2rem;
         padding: 0 1rem;
         height: 3rem;
     }
-
     .field-input {
         line-height: 2rem;
         padding: 0 1rem;
         height: 3rem;
     }
-
     .field-textarea[value=""] {
         font-family: 'Arimo', sans-serif;
         position: absolute;
@@ -607,7 +611,6 @@ p.content-felix {
         margin-top: 0;
         top: 0;
     }
-
     .field-textarea {
         font-family: 'Arimo', sans-serif;
         position: relative;
@@ -622,14 +625,12 @@ p.content-felix {
         top: 3rem;
         margin-top: -3rem;
     }
-
     .field-select[value=""] {
         font-size: 1.6rem;
         line-height: 3rem;
         height: 3rem;
         padding: 0 0.5rem;
     }
-
     .field-select {
         top: 3rem;
         margin-top: -3rem;
@@ -638,32 +639,30 @@ p.content-felix {
         padding: 0 1rem;
         height: 3rem;
     }
-
     .content-v-centered {
         width: 90%;
     }
-
     .content-v-centered.w50 {
         width: 50%;
     }
-
     .bg-colored {
         box-shadow: 0 1rem 1rem #dde0e7;
     }
-
     .modal a.close-modal[class*="icon-"] {
         line-height: 2rem;
     }
 }
 
+
 /* mobile-and-tablet */
-@media only screen and (max-width: 991px) {
-}
+
+@media only screen and (max-width: 991px) {}
+
 
 /* tablet-and-desktop */
-@media only screen and (min-width: 768px) {
-}
+
+@media only screen and (min-width: 768px) {}
 
 pre {
-	margin: 0;
+    margin: 0;
 }
