The submit message is changed for upcoming conference as hotfix.

--- a/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/submit/submit.html
+++ b/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/submit/submit.html
@@ -1,7 +1,7 @@
 ﻿<div class="content-v-centered indent-b w50">
     <div class="bg-colored">
         <div class="sign-up-form">
-            <h2>С прибытием!<br>Ваши ответы приняты! Заполните форму ниже, и письмо с вашим результатом будет немедленно отправлено. Показав его представителю FLS, вы получите подарок от нашей дружной компании.</h2>
+            <h2>С прибытием!<br>Ваши ответы приняты! Заполните форму ниже, и письмо с вашим результатом будет немедленно отправлено. Показав его представителю FLS, Вы получите отметку в межгалактическом паспорте и подарок от галактики Fist Line.</h2>
             <div class="fields">
                 <div class="field">
                     <label class="field-label" for="form-name">Имя *</label>
