Submit and Finish screen messages are configurable now

--- a/src/web-fls-quiz/Views/Home/Index.cshtml
+++ b/src/web-fls-quiz/Views/Home/Index.cshtml
@@ -15,10 +15,10 @@ else
     <!-- ko component: { name: "test", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showSubmit: showSubmit, showIntro: showIntro, addUserAnswer: addUserAnswer, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))' } } --><!-- /ko -->
     <!-- /ko -->
     <!-- ko if: isSubmitActive -->
-    <!-- ko component: { name: "submit", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showFinish: showFinish, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))' } } --><!-- /ko -->
+    <!-- ko component: { name: "submit", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showFinish: showFinish, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))', submitScreenMessage: '@(new Microsoft.AspNetCore.Html.HtmlString(Model.SubmitScreenMessage))' } } --><!-- /ko -->
     <!-- /ko -->
     <!-- ko if: isFinishActive -->
-    <!-- ko component: { name: "finish" } --><!-- /ko -->
+    <!-- ko component: { name: "finish", params: { finishScreenMessage: '@(new Microsoft.AspNetCore.Html.HtmlString(Model.FinishScreenMessage))' } } --><!-- /ko -->
     <!-- /ko -->
 
     <div id="modalError" class="modal">
