--- a/src/web-fls-quiz/wwwroot/content/css/styles.css
+++ b/src/web-fls-quiz/wwwroot/content/css/styles.css
@@ -99,7 +99,7 @@ div {
     text-indent: -9999px;
     width: 22rem;
     height: 6rem;
-    background: url("/content/images/fls-logo.svg") no-repeat;
+	background-repeat: no-repeat;
     background-size: 100% auto;
 }
 
@@ -471,7 +471,7 @@ input[type="number"] {
     width: 35rem;
     height: 18rem;
     margin: 0 auto;
-    background: url(/content/images/start.png) no-repeat;
+	background-repeat: no-repeat;
     background-size: contain;
 }
 
@@ -480,9 +480,8 @@ input[type="number"] {
     width: 30rem;
     height: 20rem;
     margin: 0 auto;
-    background: url(/content/images/finish.png) no-repeat;
+	background-repeat: no-repeat;
     background-size: contain;
-    padding-left: 22rem;
 }
 
 p.content-felix {
