--- a/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/finish/finish.html
+++ b/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/finish/finish.html
@@ -1,6 +1,6 @@
 ﻿<div class="content-v-centered indent-b">
     <div class="bg-colored indent-all">
-        <div class="felix-cat"></div>
+        <img class="felix-cat" data-bind="attr: {src: 'data:image/png;base64,' + finishScreenImageBase64}" />
         <div data-bind="html: finishScreenMessage"></div>
     </div>
 </div>
