--- a/src/web-fls-quiz/Views/Shared/_Layout.cshtml
+++ b/src/web-fls-quiz/Views/Shared/_Layout.cshtml
@@ -12,7 +12,9 @@
 <body>
     <div class="container">
         <div class="logo">
-            <a target="_blank" rel="noopener noreferrer" href="@ViewData["OrganizerWebSiteUrl"]"><div class="logo-img"></div></a>
+            <a target="_blank" rel="noopener noreferrer" href="@ViewData["OrganizerWebSiteUrl"]">
+                <div class="logo-img" style="background: url('data:image/png;base64,@ViewData["LogoImageBase64"]') no-repeat; background-size: auto 100%"></div>
+            </a>
         </div>
         <div id="quiz-app" class="content">
             @RenderBody()
