Added support for 'number of questions' set on per-quiz basis
See issue #18

--- a/src/web-fls-quiz/Views/Home/Index.cshtml
+++ b/src/web-fls-quiz/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@ else
     <!-- ko component: { name: "intro", params: { showTest: showTest, quizGreeting : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Greeting))', introScreenImageBase64 : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.IntroScreenImage.ImageBase64))' } } --><!-- /ko -->
     <!-- /ko -->
     <!-- ko if: isTestActive -->
-    <!-- ko component: { name: "test", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showSubmit: showSubmit, showIntro: showIntro, addUserAnswer: addUserAnswer, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))' } } --><!-- /ko -->
+    <!-- ko component: { name: "test", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showSubmit: showSubmit, showIntro: showIntro, addUserAnswer: addUserAnswer, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))', numberOfQuestions : @(new Microsoft.AspNetCore.Html.HtmlString(Model.NumberOfQuestions.ToString())) } } --><!-- /ko -->
     <!-- /ko -->
     <!-- ko if: isSubmitActive -->
     <!-- ko component: { name: "submit", params: { loading: loading, showModalErrorMessage: showModalErrorMessage, userAnswers: userAnswers, showFinish: showFinish, quizName : '@(new Microsoft.AspNetCore.Html.HtmlString(Model.Name))', submitScreenMessage: '@(new Microsoft.AspNetCore.Html.HtmlString(Model.SubmitScreenMessage))' } } --><!-- /ko -->
