--- a/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/question/question.html
+++ b/src/web-fls-quiz/wwwroot/scripts/apps/quiz/components/question/question.html
@@ -8,11 +8,27 @@
     <div class="polls-form-content indent-all">
         <div class="polls-img-container"><img class="polls-img" alt="img" data-bind="attr: {src: 'data:image/png;base64,' + imageBase64, alt: currentQuestionNumber() }"></div>
         <div class="polls-counter"><span class="current" data-bind="text: currentQuestionNumber"></span> из <span data-bind="text: countOfQuestions"></span></div>
+
+        <!-- ko if: multipleAnswer -->
         <ul class="polls-ul" data-bind="foreach: {data: answers, as: 'answer'}">
-            <li class="polls-li"><input type="radio" data-bind="value: answer.answerId, checked: $parent.selectedAnswerId, attr: {id: 'poll_' + answer.answerId}" /><label data-bind="attr: {for: 'poll_' + answer.answerId}, html: answer.text"></label></li>
+            <li class="polls-li">
+                <input type="checkbox" data-bind="checked: answer.isChecked, attr: {id: 'poll_' + answer.answerId}" />
+                <label data-bind="attr: {for: 'poll_' + answer.answerId}, html: answer.text"></label>
+            </li>
         </ul>
+        <!-- /ko -->
+        
+        <!-- ko ifnot: multipleAnswer -->
+        <ul class="polls-ul" data-bind="foreach: {data: answers, as: 'answer'}">
+            <li class="polls-li">
+                <input type="radio" data-bind="value: answer.answerId, checked: $parent.selectedAnswerId, attr: {id: 'poll_' + answer.answerId}" />
+                <label data-bind="attr: {for: 'poll_' + answer.answerId}, html: answer.text"></label>
+            </li>
+        </ul>
+        <!-- /ko -->
+
         <div class="polls-buttons">
-            <input readonly class="form-button" onfocus="this.blur()" value="Продолжить" data-bind="enable: selectedAnswerId, click: answerButtonClick" />
+            <input readonly class="form-button" onfocus="this.blur()" value="Продолжить" data-bind="click: answerButtonClick" />
         </div>
     </div>
 </div>
