Changed logo format from png to svg+xml.

--- a/src/web-fls-quiz/Views/Shared/_Layout.cshtml
+++ b/src/web-fls-quiz/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="logo">
             <a target="_blank" rel="noopener noreferrer" href="@ViewData["OrganizerWebSiteUrl"]">
-                <div class="logo-img" style="background: url('data:image/png;base64,@ViewData["LogoImageBase64"]') no-repeat; background-size: auto 100%"></div>
+                <div class="logo-img" style="background: url('data:image/svg+xml;base64,@ViewData["LogoImageBase64"]') no-repeat; background-size: auto 100%"></div>
             </a>
         </div>
         <div id="quiz-app" class="content">
